Modify CMakeLists.txt for SFML and asset management
Updated CMakeLists.txt to set C++ standard, find SFML, and copy asset files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,28 @@
 cmake_minimum_required(VERSION 3.10)
+
+# Nazwa Twojego projektu
 project(SantaGame)
 
-# Standard C++
+# Ustawiamy standard C++ na 17 (bezpieczny i nowoczesny)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Dodanie ścieżki do plików nagłówkowych, żeby nie pisać długich include'ów
-include_directories(include)
+# Znajdujemy bibliotekę SFML zainstalowaną przez Homebrew
+# Szukamy modułów: graphics, window, system (te są używane w twoim kodzie)
+find_package(SFML 2.5 COMPONENTS graphics window system required)
 
-# Automatyczne znalezienie wszystkich plików .cpp w podfolderach
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+# Dodajemy plik wykonywalny
+add_executable(SantaGame main.cpp)
 
-# SFML - szukanie bibliotek
-find_package(SFML 2.5 COMPONENTS graphics window system audio REQUIRED)
+# Linkujemy biblioteki SFML do Twojego pliku wykonywalnego
+target_link_libraries(SantaGame sfml-graphics sfml-window sfml-system)
 
-# Budowanie pliku wykonywalnego
-add_executable(SantaGame ${SOURCES})
+# --- KOPIOWANIE ZASOBÓW (ASSETS) ---
+# To jest kluczowe, aby gra widziała pliki png/ttf po uruchomieniu z folderu build.
+# Kopiujemy wszystkie pliki .png, .jpg i .ttf do folderu, w którym powstaje plik wykonywalny.
 
-# Linkowanie bibliotek SFML
-target_link_libraries(SantaGame sfml-graphics sfml-window sfml-system sfml-audio)
+file(GLOB ASSETS_FONTS "${CMAKE_CURRENT_SOURCE_DIR}/*.ttf")
+file(GLOB ASSETS_IMGS_PNG "${CMAKE_CURRENT_SOURCE_DIR}/*.png")
+file(GLOB ASSETS_IMGS_JPG "${CMAKE_CURRENT_SOURCE_DIR}/*.jpg")
+
+file(COPY ${ASSETS_FONTS} ${ASSETS_IMGS_PNG} ${ASSETS_IMGS_JPG} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
