--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,32 @@ cmake_minimum_required(VERSION 3.10)
 # Nazwa Twojego projektu
 project(SantaGame)
 
-# Ustawiamy standard C++ na 17 (bezpieczny i nowoczesny)
+# Wymagany standard C++
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Znajdujemy bibliotekę SFML zainstalowaną przez Homebrew
-# Szukamy modułów: graphics, window, system (te są używane w twoim kodzie)
-find_package(SFML 2.5 COMPONENTS graphics window system required)
+# --- KLUCZOWA ZMIANA: FetchContent ---
+# Zamiast szukać biblioteki w systemie (find_package), pobieramy ją bezpośrednio.
+
+include(FetchContent)
+
+FetchContent_Declare(
+    sfml
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG        2.6.2  # Tu wymuszamy konkretną wersję!
+)
+
+# To sprawi, że SFML zostanie pobrany i dostępny dla Twojego projektu
+FetchContent_MakeAvailable(sfml)
 
 # Dodajemy plik wykonywalny
 add_executable(SantaGame main.cpp)
 
-# Linkujemy biblioteki SFML do Twojego pliku wykonywalnego
-target_link_libraries(SantaGame sfml-graphics sfml-window sfml-system)
+# Linkujemy biblioteki (zwróć uwagę, że nazwy to teraz sfml-graphics itp., bez zmiennych)
+target_link_libraries(SantaGame PRIVATE sfml-graphics sfml-window sfml-system)
 
-# --- KOPIOWANIE ZASOBÓW (ASSETS) ---
-# To jest kluczowe, aby gra widziała pliki png/ttf po uruchomieniu z folderu build.
-# Kopiujemy wszystkie pliki .png, .jpg i .ttf do folderu, w którym powstaje plik wykonywalny.
-
+# --- KOPIOWANIE ZASOBÓW (Fix dla Maca) ---
+# Kopiuje obrazki do folderu, gdzie ląduje plik wykonywalny
 file(GLOB ASSETS_FONTS "${CMAKE_CURRENT_SOURCE_DIR}/*.ttf")
 file(GLOB ASSETS_IMGS_PNG "${CMAKE_CURRENT_SOURCE_DIR}/*.png")
 file(GLOB ASSETS_IMGS_JPG "${CMAKE_CURRENT_SOURCE_DIR}/*.jpg")
