--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,4 +37,6 @@ file(GLOB ASSETS_IMGS_JPG "${CMAKE_CURRENT_SOURCE_DIR}/*.jpg")
 file(GLOB ASSETS_AUDIO "${CMAKE_CURRENT_SOURCE_DIR}/*.wav" "${CMAKE_CURRENT_SOURCE_DIR}/*.ogg" "${CMAKE_CURRENT_SOURCE_DIR}/*.mp3")
 
 # 2. Skopiuj je
-file(COPY ${ASSETS_FONTS} ${ASSETS_IMGS_PNG} ${ASSETS_IMGS_JPG} ${ASSETS_AUDIO} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+# --- KOPIOWANIE ZASOBÓW ---
+# Kopiujemy cały folder 'assets' do miejsca, gdzie powstaje gra.
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/assets" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
